--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(entities.c)
+AC_INIT(src/libxen.c)
 AM_CONFIG_HEADER(config.h)
 AC_CANONICAL_HOST
 
@@ -33,3 +33,21 @@ VERSION=${LIBXEN_VERSION}
 
 AM_INIT_AUTOMAKE(libxen, $VERSION)
 
+dnl Checks for programs.
+AC_PROG_CC
+AC_PROG_INSTALL
+AC_PROG_CPP
+AC_PATH_PROG(RM, rm, /bin/rm)
+AC_PATH_PROG(MV, mv, /bin/mv)
+AC_PATH_PROG(TAR, tar, /bin/tar)
+
+dnl Make sure we have an ANSI compiler
+AM_C_PROTOTYPES
+test "x$U" != "x" && AC_MSG_ERROR(Compiler not ANSI compliant)
+
+AM_PROG_LIBTOOL
+
+dnl search for the low level Xen library
+AC_SEARCH_LIBS(xc_domain_create, [xenctrl])
+
+AC_OUTPUT(Makefile src/Makefile)
