--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,5 +4,5 @@ INCLUDES = -I$(top_builddir)/include -I@srcdir@/include
 
 lib_LTLIBRARIES = libxen.la
 libxen_la_LIBADD = 
-libxen_la_LDFLAGS = -version-info @LIBXML_VERSION_INFO@
+libxen_la_LDFLAGS = -version-info @LIBXEN_VERSION_INFO@
 libxen_la_SOURCES = libxen.c
