* TODO libxen.pc.in libxen.spec.in include/Makefile.am Makefile.am   config.h.in configure.in: fix make dist, add rpm packaging * src/libxen_sym.version src/Makefile.am: set a policy of no   export by default of library symbols Daniel

--- a/configure.in
+++ b/configure.in
@@ -50,4 +50,4 @@ AM_PROG_LIBTOOL
 dnl search for the low level Xen library
 AC_SEARCH_LIBS(xc_domain_create, [xenctrl])
 
-AC_OUTPUT(Makefile src/Makefile)
+AC_OUTPUT(Makefile src/Makefile include/Makefile libxen.pc libxen.spec)
