* configure.in: checking xenstore library, error out on missing libs * include/libxen.h src/libxen.c src/libxen_sym.version: adding new   entry points Daniel

--- a/configure.in
+++ b/configure.in
@@ -48,6 +48,7 @@ test "x$U" != "x" && AC_MSG_ERROR(Compiler not ANSI compliant)
 AM_PROG_LIBTOOL
 
 dnl search for the low level Xen library
-AC_SEARCH_LIBS(xc_domain_create, [xenctrl])
+AC_SEARCH_LIBS(xc_domain_create, [xenctrl], [], [AC_MSG_ERROR([Xen control library not found])])
+AC_SEARCH_LIBS(xs_read, [xenstore], [], [AC_MSG_ERROR([Xen store library not found])])
 
 AC_OUTPUT(Makefile src/Makefile include/Makefile libxen.pc libxen.spec)
