* src/Makefile.am src/hash.[ch]: added hash module based on libxml2   one. * include/libxen.h src/libxen.c src/libxen_sym.version: extend API   start to access libxenctrl directly (need xen update to get includes) * src/xensh.c: access to both xenstore and hypervisor Daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,7 @@ lib_LTLIBRARIES = libxen.la
 libxen_la_LIBADD = 
 libxen_la_LDFLAGS = -Wl,--version-script=$(srcdir)/libxen_sym.version \
                     -version-info @LIBXEN_VERSION_INFO@
-libxen_la_SOURCES = libxen.c internal.h
+libxen_la_SOURCES = libxen.c internal.h hash.c hash.h
 
 noinst_PROGRAMS=xensh
 
