* Makefile.am configure.in docs/apibuild.py docs/libxen-api.xml   docs/libxen-refs.xml docs/structures.fig: starting to add docs   and the extraction tool * src/libxen.c: fixed comments error raised by apibuild Daniel

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = src include #docs
+SUBDIRS = src include docs
 EXTRA_DIST = libxen.spec.in libxen.spec COPYING.LIB \
              libxen.pc.in libxen.pc TODO AUTHORS ChangeLog \
 	     NEWS README 
