* Makefile.am README TODO autogen.sh configure.in libvir.pc.in   libvir.spec.in docs/Makefile.am docs/apibuild.py docs/structures.fig   include/Makefile.am include/libvir.h src/Makefile.am src/hash.c   src/hash.h src/internal.h src/libvir.c src/libvir_sym.version   src/virsh.c: renamed to libvir Daniel

--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(src/libxen.c)
+AC_INIT(src/libvir.c)
 AM_CONFIG_HEADER(config.h)
 AC_CANONICAL_HOST
 
@@ -31,7 +31,7 @@ AC_SUBST(LIBXEN_VERSION_EXTRA)
 
 VERSION=${LIBXEN_VERSION}
 
-AM_INIT_AUTOMAKE(libxen, $VERSION)
+AM_INIT_AUTOMAKE(libvir, $VERSION)
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -50,7 +50,7 @@ AM_PROG_LIBTOOL
 dnl
 dnl specific tests to setup DV devel environments with debug etc ...
 dnl
-if [[ "${LOGNAME}" = "veillard" -a "`pwd`" = "/u/veillard/libxen" ]] ; then
+if [[ "${LOGNAME}" = "veillard" -a "`pwd`" = "/u/veillard/libvir" ]] ; then
     if test "${GCC}" = "yes" ; then
 	CFLAGS="-g -O -pedantic -W -Wformat -Wunused -Wimplicit -Wreturn-type -Wswitch -Wcomment -Wtrigraphs -Wformat -Wchar-subscripts -Wuninitialized -Wparentheses -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs -Winline -Wredundant-decls -Wall"
     fi
@@ -64,4 +64,4 @@ dnl search for the low level Xen library
 AC_SEARCH_LIBS(xc_domain_create, [xenctrl], [], [AC_MSG_ERROR([Xen control library not found])])
 AC_SEARCH_LIBS(xs_read, [xenstore], [], [AC_MSG_ERROR([Xen store library not found])])
 
-AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile libxen.pc libxen.spec)
+AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile libvir.pc libvir.spec)
