* docs/Makefile.am docs/apibuild.py docs/libvir-api.xml   docs/libvir-refs.xml: fix XML API generation * include/libvir.h src/libvir.c src/virsh.c: fix the info memory   API again, use KB, not bytes so that an unsigned long is sufficient. Daniel

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -8,7 +8,7 @@ PAGES= # index.html
 APIPAGES=APIconstructors.html APIfiles.html APIfunctions.html \
     APIsymbols.html APIchunk0.html
 EXTRA_DIST=							\
-	   libvir-api.xml apibuild.py
+	   libvir-api.xml libxen-refs.xml apibuild.py
 
 
 man_MANS=
