* configure.in docs/FAQ.html docs/Libxml2-Logo-90x34.gif   docs/Makefile.am docs/bugs.html docs/index.html docs/intro.html   docs/libvir.html docs/redhat.gif docs/site.xsl: starting to add   the web site, based on libxml2 one. * src/hash.c: add a missing include Daniel

--- a/configure.in
+++ b/configure.in
@@ -40,6 +40,9 @@ AC_PROG_CPP
 AC_PATH_PROG(RM, rm, /bin/rm)
 AC_PATH_PROG(MV, mv, /bin/mv)
 AC_PATH_PROG(TAR, tar, /bin/tar)
+AC_PATH_PROG(XMLLINT, xmllint, /usr/bin/xmllint)
+AC_PATH_PROG(XSLTPROC, xsltproc, /usr/bin/xsltproc)
+
 
 dnl Make sure we have an ANSI compiler
 AM_C_PROTOTYPES
