--- a/include/libvir.h.in
+++ b/include/libvir.h.in
@@ -118,7 +118,7 @@ typedef enum {
  * version * 1,000,000 + minor * 1000 + micro
  */
 
-#define LIBVIR_VERSION_NUMBER 1
+#define LIBVIR_VERSION_NUMBER @LIBVIR_VERSION_NUMBER@
 
 int			virGetVersion		(unsigned long *libVer,
 						 const char *type,
