* include/libvir.h src/Makefile.am src/internal.h src/libvir.c   src/libvir_sym.version src/virsh.c src/xml.c: started working on   the XML dump, added a dumpxml virsh version and a bit of   infrastructure code. Found a way to detect dead ID from xenstore   data. Daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,7 +14,8 @@ libvir_la_LDFLAGS = -Wl,--version-script=$(srcdir)/libvir_sym.version \
 libvir_la_SOURCES =						\
 		libvir.c internal.h				\
 		hash.c hash.h					\
-		xen_internal.c xen_internal.h
+		xen_internal.c xen_internal.h			\
+		xml.c
 
 noinst_PROGRAMS=virsh
 
