add virDomainGetOSType() + small code refactoring

--- a/include/libvir.h.in
+++ b/include/libvir.h.in
@@ -180,9 +180,14 @@ int			virDomainGetInfo	(virDomainPtr domain,
  */
 const char *		virDomainGetName	(virDomainPtr domain);
 unsigned int		virDomainGetID		(virDomainPtr domain);
+char *			virDomainGetOSType	(virDomainPtr domain);
 unsigned long		virDomainGetMaxMemory	(virDomainPtr domain);
 int			virDomainSetMaxMemory	(virDomainPtr domain,
 						 unsigned long memory);
+/*
+ * XML domain description
+ */
+char *			virDomainGetXMLDesc	(virDomainPtr domain, int flags);
 
 #ifdef __cplusplus
 }
