* Makefile.am configure.in libvir.spec.in python/*: added a first   version for python bindings, heavilly based on libxml2/libxslt   way of doing things, maybe this need to be revisited. Added packaging   too. * src/hash.h: fixed the Copyright notice. Daniel

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = src include docs
+SUBDIRS = src include docs @PYTHON_SUBDIR@
+
 EXTRA_DIST = libvir.spec.in libvir.spec COPYING.LIB \
              libvir.pc.in libvir.pc TODO AUTHORS ChangeLog \
 	     NEWS README 
