* docs/libvir.html: grammatical fix * src/Makefile.am src/sexpr.c src/sexpr.h: starting to integrate   Anthony Liquori libxend code * src/libvir.c: fix an uninitialized value Daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,7 +15,8 @@ libvir_la_SOURCES =						\
 		libvir.c internal.h				\
 		hash.c hash.h					\
 		xen_internal.c xen_internal.h			\
-		xml.c
+		xml.c						\
+		sexpr.c sexpr.h
 
 bin_PROGRAMS=virsh
 
