--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,8 +14,9 @@ libvir_la_LDFLAGS = -Wl,--version-script=$(srcdir)/libvir_sym.version \
 libvir_la_SOURCES =						\
 		libvir.c internal.h				\
 		hash.c hash.h					\
-		xen_internal.c xen_internal.h			\
 		xml.c						\
+		xen_internal.c xen_internal.h			\
+		xend_internal.c xend_internal.h			\
 		sexpr.c sexpr.h
 
 bin_PROGRAMS=virsh
