* include/libvir.h[.in]: added VIR_DOMAIN_CRASHED status, small   doc fix * src/virsh.c: fix a integer being formatted as %s in idof * src/internal.h src/libvir.c src/xend_internal.[ch]: started to   integrated the xend back-end, especially for getting informations   about a domain. Daniel

--- a/include/libvir.h.in
+++ b/include/libvir.h.in
@@ -116,6 +116,14 @@ struct _virDomainInfo {
 };
 
 /**
+ * virDomainInfoPtr:
+ *
+ * a virDomainInfoPtr is a pointer to a virDomainInfo structure.
+ */
+
+typedef virDomainInfo *virDomainInfoPtr;
+
+/**
  * virDomainKernel:
  *
  * a virDomainImage is the set of kernel related informations associated
